Alignment fix

--- a/src/contents/team/TeamContents/TeamMembers.module.scss
+++ b/src/contents/team/TeamContents/TeamMembers.module.scss
@@ -5,7 +5,9 @@
 }
 
 .members {
-  @include personIconDisplayWrap();
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .topMemberContainer {
